# quicsy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.am  README.md  autogen.sh  bootstrap.sh  compile.sh  configure.ac  debug.cc  debug.h  http.cc  keylog.cc  keylog.h  network.h  quicsy.cc  quicsy.h  quicsy_client.cc  quicsy_server.cc  quicsy_server.h  script.sh  shared.cc  shared.h  template.h  util.cc  util.h
docs/: configuration
include/: Makefile.am
include/quicsy/: Makefile.am  client.h  debug.h  http.h  keylog.h  network.h  options.h  server.h  shared.h  util.h
scripts/: dash_encoder.py  encode_hls.py
scripts/abr/: manifest.py
src/: Makefile.am  debug.cc  http.cc  keylog.cc  quicsy_client.cc  quicsy_server.cc  shared.cc  test.qlog  util.cc
src/abr/: adaptation.c  main.c  mpd_parse.c  mpd_parse.h  test_abr.c  utils.c  utils.h
src/abr/examples/: BBB_1s_final.mpd
streaming/: debug.c  decoder.cpp  decoder.h  main_window.cpp  tcp_client.c  tcp_server.c
streaming/tcp_streaming/: debug.h  decoder.cpp  decoder.h  main_window.cpp  tcp.h  tcp_client.c  tcp_server.c  transcoder.c
